--- a/app/css/root.css
+++ b/app/css/root.css
@@ -237,7 +237,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: auto;
 }
 
